# libXDG

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Readme.md
debian/: changelog  control  rules
src/: CMakeLists.txt  config.h.in  xdg_demo.cpp
support/: copyright-header.sh
support/cmake/: Depedencies.cmake  Gettext.cmake
support/gitignore/: clion  clion_extras  concat.sh  deb  local
support/tools/: build  build-asan  build-debug  build-release  build-sanitizers  build-tsan  build-ubsan  build-win32-debug.bat  build-win64-debug.bat  build-win64-release.bat  install-tools  make-deb  tidy
test/: CMakeLists.txt  hello_test.cpp  test_main.cpp
tools/: build-win32-release.bat
translations/: CMakeLists.txt  Readme.md  el.po
